--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ship-fast-code",
+  "name": "fcksubscription-boilerplate",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -21,6 +21,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "form-data": "^4.0.0",
+    "framer-motion": "^12.0.1",
     "next": "^14.1.4",
     "next-sitemap": "^4.2.3",
     "nextjs-toploader": "^1.6.11",
@@ -35,6 +36,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "@types/jest": "^29.5.12",
     "@types/mdx": "^2.0.12",
     "@types/mongoose": "^5.11.97",
