--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.5.6",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-slot": "^1.1.1",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/ssr": "^0.4.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/ssr": "^0.4.1",
     "@supabase/supabase-js": "^2.45.0",
     "@tiptap/extension-image": "^2.11.3",
     "@tiptap/extension-link": "^2.11.3",
@@ -25,11 +28,14 @@
     "@tiptap/react": "^2.11.3",
     "@tiptap/starter-kit": "^2.11.3",
     "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "crisp-sdk-web": "^1.0.22",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "form-data": "^4.0.0",
     "framer-motion": "^12.0.1",
+    "lucide-react": "^0.473.0",
     "next": "^14.1.4",
     "next-sitemap": "^4.2.3",
     "nextjs-toploader": "^1.6.11",
@@ -40,7 +46,9 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.26.3",
     "resend": "^4.0.1",
+    "sonner": "^1.7.2",
     "stripe": "^13.11.0",
+    "tailwind-merge": "^2.6.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
